# poco-logger-example

./: CMakeLists.txt  main.cpp  main.cpp.bk1  main.cpp.bk2
